// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerInternal SkipLinkFocusedBreakpointL play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal SkipLinkFocusedMobileScreen play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithAttributes play-test 1`] = `
<div data-test-block="true">
  <header id="htmlId"
          lang="nb"
          data-testid="123ID"
          class="dummyClassname"
  >
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithChildren play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            Saksbehandlingsløsning med en overskrift som er lang
          </span>
        </a>
        <span>
          En sekundær overskrift som også er lang
        </span>
      </div>
      <div class="_childrenAndUserContainer_14456_69 undefined">
        <a class="_link_z7jba_1 _link_white_z7jba_1 "
           href="/hjelp"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isCustom_z7jba_41"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M11 18h2v-2h-2v2Zm1-16C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-14a4 4 0 0 0-4 4h2a2 2 0 1 1 4 0c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5a4 4 0 0 0-4-4Z">
            </path>
          </svg>
          Hjelp
        </a>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 15.5a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7Zm7.43-2.53c.04-.32.07-.64.07-.97 0-.33-.03-.66-.07-1l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.31-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.34-.07.67-.07 1 0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z">
            </path>
          </svg>
          <span class>
            Tilpass løsningen
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 15.5a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7Zm7.43-2.53c.04-.32.07-.64.07-.97 0-.33-.03-.66-.07-1l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.31-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.34-.07.67-.07 1 0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z">
            </path>
          </svg>
          <span class>
            Meld feil
          </span>
        </button>
        <div class="_userContainer_14456_76">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _userContainerIcon_14456_92"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
          <span class="_userContainerName_14456_96">
            Johansen, Krystall Pepsi
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithCustomLogo smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithCustomTheme smoke-test 1`] = `
<div data-test-block="true">
  <header class="dummyCustomTheme">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithDefaults play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithDemoMode play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_constructionBand_14456_1">
      <div class="_constructionBandTitle_14456_5">
        demo
      </div>
    </div>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithLogoClick play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithLongConstructionText smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_constructionBand_14456_1">
      <div class="_constructionBandTitle_14456_5">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </div>
    </div>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithLongDescriptionAndThreeChildrenMobile smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
        <span>
          FOLK OG TRUBADURSERVICE WOODIE GUTHRIE 999 999 999
        </span>
      </div>
      <div class="_childrenAndUserContainer_14456_69 undefined">
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m15.07 11.25-.9.92C13.45 12.89 13 13.5 13 15h-2v-.5c0-1.11.45-2.11 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41a2 2 0 1 0-4 0H8a4 4 0 0 1 8 0 3.2 3.2 0 0 1-.93 2.25ZM13 19h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12a10 10 0 0 0 20 0c0-5.53-4.5-10-10-10Z">
            </path>
          </svg>
          <span class>
            Hjelp
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 9h5.5L13 3.5V9ZM6 2h8l6 6v12a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4c0-1.11.89-2 2-2Zm9 16v-2H6v2h9Zm3-4v-2H6v2h12Z">
            </path>
          </svg>
          <span class>
            Dokumentasjon
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
            </path>
          </svg>
          <span class>
            Opprett RF-Ørtiatten
          </span>
        </button>
        <div class="_userContainer_14456_76">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _userContainerIcon_14456_92"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
          <span class="_userContainerName_14456_96">
            Etternavnesen Fornavn
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithLongTitleAndLongDescriptionAndThreeChildrenBreakpointM smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            Oppdragsregister saksbehandling
          </span>
        </a>
        <span>
          Arbeidsliste for ulike scenarier som er lange
        </span>
      </div>
      <div class="_childrenAndUserContainer_14456_69 undefined">
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m15.07 11.25-.9.92C13.45 12.89 13 13.5 13 15h-2v-.5c0-1.11.45-2.11 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41a2 2 0 1 0-4 0H8a4 4 0 0 1 8 0 3.2 3.2 0 0 1-.93 2.25ZM13 19h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12a10 10 0 0 0 20 0c0-5.53-4.5-10-10-10Z">
            </path>
          </svg>
          <span class>
            Hjelp
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 9h5.5L13 3.5V9ZM6 2h8l6 6v12a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4c0-1.11.89-2 2-2Zm9 16v-2H6v2h9Zm3-4v-2H6v2h12Z">
            </path>
          </svg>
          <span class>
            Dokumentasjon
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
            </path>
          </svg>
          <span class>
            Opprett RF-Ørtiatten
          </span>
        </button>
        <div class="_userContainer_14456_76">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _userContainerIcon_14456_92"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
          <span class="_userContainerName_14456_96">
            Winnifred-Jonathan Hastings
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithLongTitleDescriptionMobile smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            kakeportalen kakeportalen kakeportalen kakeportalen
          </span>
        </a>
        <span>
          kaka er en løgnkaka er en løgnkaka er en løgnkaka er en løgn
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithOneChildMobile smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
        <span>
          Arbeidsliste
        </span>
      </div>
      <div class="_childrenAndUserContainer_14456_69 undefined">
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m15.07 11.25-.9.92C13.45 12.89 13 13.5 13 15h-2v-.5c0-1.11.45-2.11 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41a2 2 0 1 0-4 0H8a4 4 0 0 1 8 0 3.2 3.2 0 0 1-.93 2.25ZM13 19h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12a10 10 0 0 0 20 0c0-5.53-4.5-10-10-10Z">
            </path>
          </svg>
          <span class>
            Hjelp
          </span>
        </button>
        <div class="_userContainer_14456_76">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _userContainerIcon_14456_92"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
          <span class="_userContainerName_14456_96">
            Etternavnesen Fornavn
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithRef play-test 1`] = `
<div data-test-block="true">
  <header class
          id="dummyIdForwardedFromRef"
  >
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithThreeChildrenBreakpointM smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
        <span>
          Arbeidsliste
        </span>
      </div>
      <div class="_childrenAndUserContainer_14456_69 undefined">
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m15.07 11.25-.9.92C13.45 12.89 13 13.5 13 15h-2v-.5c0-1.11.45-2.11 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41a2 2 0 1 0-4 0H8a4 4 0 0 1 8 0 3.2 3.2 0 0 1-.93 2.25ZM13 19h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12a10 10 0 0 0 20 0c0-5.53-4.5-10-10-10Z">
            </path>
          </svg>
          <span class>
            Hjelp
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 9h5.5L13 3.5V9ZM6 2h8l6 6v12a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4c0-1.11.89-2 2-2Zm9 16v-2H6v2h9Zm3-4v-2H6v2h12Z">
            </path>
          </svg>
          <span class>
            Dokumentasjon
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
            </path>
          </svg>
          <span class>
            Opprett RF-Ørtiatten
          </span>
        </button>
        <div class="_userContainer_14456_76">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _userContainerIcon_14456_92"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
          <span class="_userContainerName_14456_96">
            Etternavnesen Fornavn
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithThreeChildrenBreakpointS smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            MVA
          </span>
        </a>
        <span>
          Arbeidsliste
        </span>
      </div>
      <div class="_childrenAndUserContainer_14456_69 undefined">
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m15.07 11.25-.9.92C13.45 12.89 13 13.5 13 15h-2v-.5c0-1.11.45-2.11 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41a2 2 0 1 0-4 0H8a4 4 0 0 1 8 0 3.2 3.2 0 0 1-.93 2.25ZM13 19h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12a10 10 0 0 0 20 0c0-5.53-4.5-10-10-10Z">
            </path>
          </svg>
          <span class>
            Hjelp
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 9h5.5L13 3.5V9ZM6 2h8l6 6v12a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4c0-1.11.89-2 2-2Zm9 16v-2H6v2h9Zm3-4v-2H6v2h12Z">
            </path>
          </svg>
          <span class>
            Dokumentasjon
          </span>
        </button>
        <button class="_button_151en_1 _button_withIconLeft_151en_8  "
                data-brightness="light"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_151en_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
            </path>
          </svg>
          <span class>
            Opprett RF-Ørtiatten
          </span>
        </button>
        <div class="_userContainer_14456_76">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _userContainerIcon_14456_92"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
          <span class="_userContainerName_14456_96">
            Etternavnesen Fornavn
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithTitleDescriptionUser play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_14456_21"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topBanner_14456_27">
      <div class="_titleAndDescriptionContainer_14456_37">
        <a class="_logoAndTitleLink_14456_44"
           href="#"
        >
          <img class="_logoImage_14456_57"
               src="[REMOVED]"
               alt
               aria-hidden="true"
          >
          <span>
            kakeportalen
          </span>
        </a>
        <span>
          kaka er en løgn
        </span>
      </div>
      <div class="_childrenAndUserContainer_14456_69 undefined">
        <div class="_userContainer_14456_76">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _userContainerIcon_14456_92"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
            </path>
          </svg>
          <span class="_userContainerName_14456_96">
            Sandra Saksbehandler
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;
